lang/tests/compile_fail/one_of_set_inner.stderr
error: `set_inner` is not supported on `#[account(one_of)]` accounts
  --> tests/compile_fail/one_of_set_inner.rs:15:10
   |
15 | pub enum ConsensusAccount {
   |          ^^^^^^^^^^^^^^^^
